--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</header>
 
 		<main>
-			<div class="timetable dragscroll">
+			<div class="timetable">
 				<img class="timetable__img" src="assets/img/1.jpeg">
 			</div>
 		</main>
