--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 		</footer>
 	</div>	
 
-	<script type="text/javascript" src="assets/script/drag.js"></script>
+	<!-- <script type="text/javascript" src="assets/script/drag.js"></script> -->
 </body>
 </html>
