--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<div class="wrapper">	
 		<header class="main_header center">
-			<p class="title_main">Расписание</p>
+			<p class="title_main">Рассписание</p>
 		</header>
 
 		<main>
