--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<main>
 			<div class="timetable">
-				<img class="timetable__img" src="assets/img/timetable/1912.png">
+				<img class="timetable__img" src="assets/img/timetable.png">
 			</div>
 		</main>
 
