--- a/index.html
+++ b/index.html
@@ -13,9 +13,58 @@
 		</header>
 
 		<main>
-			<div class="timetable">
-				<img class="timetable__img" src="assets/img/timetable.jpg">
-			</div>
+			<section class="timetable">
+				<div class="timetable__class show">
+					<img class="timetable__img" src="assets/img/timetable/1 class/1.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/2.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/3.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/4.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/5.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/6.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/7.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/8.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/9.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/10.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/11.jpg">
+					<img class="timetable__img" src="assets/img/timetable/1 class/12.jpg">
+				</div>
+				<div class="timetable__class">
+					<img class="timetable__img" src="assets/img/timetable/2 class/1.jpg">
+					<img class="timetable__img" src="assets/img/timetable/2 class/2.jpg">
+					<img class="timetable__img" src="assets/img/timetable/2 class/3.jpg">
+					<img class="timetable__img" src="assets/img/timetable/2 class/4.jpg">
+					<img class="timetable__img" src="assets/img/timetable/2 class/5.jpg">
+					<img class="timetable__img" src="assets/img/timetable/2 class/6.jpg">
+					<img class="timetable__img" src="assets/img/timetable/2 class/7.jpg">
+					<img class="timetable__img" src="assets/img/timetable/2 class/8.jpg">
+				</div>
+				<div class="timetable__class">
+					<img class="timetable__img" src="assets/img/timetable/3 class/1.jpg">
+					<img class="timetable__img" src="assets/img/timetable/3 class/2.jpg">
+					<img class="timetable__img" src="assets/img/timetable/3 class/3.jpg">
+					<img class="timetable__img" src="assets/img/timetable/3 class/4.jpg">
+					<img class="timetable__img" src="assets/img/timetable/3 class/5.jpg">
+					<img class="timetable__img" src="assets/img/timetable/3 class/6.jpg">
+					<img class="timetable__img" src="assets/img/timetable/3 class/7.jpg">
+					<img class="timetable__img" src="assets/img/timetable/3 class/8.jpg">
+					<img class="timetable__img" src="assets/img/timetable/3 class/9.jpg">
+				</div>
+				<div class="timetable__class">
+					<img class="timetable__img" src="assets/img/timetable/4 class/1.jpg">
+					<img class="timetable__img" src="assets/img/timetable/4 class/2.jpg">
+					<img class="timetable__img" src="assets/img/timetable/4 class/3.jpg">
+					<img class="timetable__img" src="assets/img/timetable/4 class/4.jpg">
+					<img class="timetable__img" src="assets/img/timetable/4 class/5.jpg">
+					<img class="timetable__img" src="assets/img/timetable/4 class/6.jpg">
+				</div>
+			</section>
+
+			<section class="class">
+				<button class="class__btn" type="button" id="1_class">1 курс</button>
+				<button class="class__btn" type="button" id="2_class">2 курс</button>
+				<button class="class__btn" type="button" id="3_class">3 курс</button>
+				<button class="class__btn" type="button" id="4_class">4 курс</button>
+			</section>
 		</main>
 
 		<footer>
@@ -24,5 +73,6 @@
 	</div>	
 
 	<!-- <script type="text/javascript" src="assets/script/drag.js"></script> -->
+	<script type="text/javascript" src="assets/script/change_class_img.js"></script>
 </body>
 </html>
