--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 
 	<div class="wrapper">	
-		<header class="main_header center">
-			<p class="title_main">Расписание</p>
-		</header>
+		<main class="timetable">
+			<header class="timetable__header">
+				<p class="title_main">< Расписание ></p>
+			</header>
 
-		<main>
-			<section class="timetable">
+			<section class="timetable__list">
 				<div class="timetable__class show">
 					<img class="timetable__img" src="assets/img/timetable/1 class/1.jpg">
 					<img class="timetable__img" src="assets/img/timetable/1 class/2.jpg">
@@ -60,7 +60,7 @@
 			</section>
 
 			<section class="class">
-				<button class="class__btn" type="button" id="1_class">1 курс</button>
+				<button class="class__btn class__btn--active" type="button" id="1_class">1 курс</button>
 				<button class="class__btn" type="button" id="2_class">2 курс</button>
 				<button class="class__btn" type="button" id="3_class">3 курс</button>
 				<button class="class__btn" type="button" id="4_class">4 курс</button>
