--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="assets/style/style.css">
+	<meta name="viewport" content="width=device-widch, user-scalable=no">
 </head>
 <body>
 
